tests/ui/regions/regions-ref-in-fn-arg.stderr
error[E0515]: cannot return value referencing function parameter
  --> $DIR/regions-ref-in-fn-arg.rs:2:5
   |
LL | fn arg_item(ref x: Box<isize>) -> &'static isize {
   |             ----- function parameter borrowed here
LL |     x
   |     ^ returns a value referencing data owned by the current function

error[E0515]: cannot return value referencing function parameter
  --> $DIR/regions-ref-in-fn-arg.rs:8:18
   |
LL |     with(|ref x| x)
   |           -----  ^ returns a value referencing data owned by the current function
   |           |
   |           function parameter borrowed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0515`.
